--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 roseasy/tests/test_inputs/fragments/*
 roseasy_codykrivacic.egg-info/*
 *.bak
+roseasy_codykrivacic.egg-info/PKG-INFO
+roseasy_codykrivacic.egg-info/SOURCES.txt
